applications/level4-pgp-decrypt/deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: level4-pgp-decrypt
  namespace: poc-hashicorp-vault-application
  labels:
    app: level4-pgp-decrypt
spec:
  type: ClusterIP
  selector:
    app: level4-pgp-decrypt
  ports:
    - name: http
      port: 8080
      targetPort: http
